<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/people_list_item">

    <TextView
        android:id="@+id/classesTitle"
        style="@style/List_Item_String"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/classTitle"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/nameClasses"
        style="@style/List_Item_String"
        app:layout_constraintStart_toEndOf="@id/classesTitle"
        app:layout_constraintTop_toTopOf="@id/classesTitle"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/roomTitle"
        style="@style/List_Item_String"
        app:layout_constraintStart_toStartOf="@id/classesTitle"
        app:layout_constraintTop_toBottomOf="@id/classesTitle"
        android:text="@string/roomTitle"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/roomClass"
        style="@style/List_Item_String"
        app:layout_constraintStart_toEndOf="@id/roomTitle"
        app:layout_constraintTop_toTopOf="@id/roomTitle"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/subjectTitle"
        style="@style/List_Item_String"
        app:layout_constraintStart_toStartOf="@id/classesTitle"
        app:layout_constraintTop_toBottomOf="@id/roomTitle"
        android:text="@string/subjectTitle"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/subjectClass"
        style="@style/List_Item_String"
        app:layout_constraintStart_toEndOf="@id/subjectTitle"
        app:layout_constraintTop_toTopOf="@id/subjectTitle"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/teacherTitle"
        style="@style/List_Item_String"
        app:layout_constraintStart_toStartOf="@id/classesTitle"
        app:layout_constraintTop_toBottomOf="@id/subjectTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/teacherTitle"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/teacherClass"
        style="@style/List_Item_String"
        app:layout_constraintStart_toEndOf="@id/teacherTitle"
        app:layout_constraintTop_toTopOf="@id/teacherTitle"
        android:layout_marginStart="15dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>