<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/people_list_item">

    <TextView
        android:id="@+id/nameTitle"
        style="@style/List_Item_String"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/nameTitle"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/firstNamePerson"
        style="@style/List_Item_String"
        app:layout_constraintStart_toEndOf="@id/nameTitle"
        app:layout_constraintTop_toTopOf="@id/nameTitle"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/lastnamePerson"
        style="@style/List_Item_String"
        app:layout_constraintStart_toEndOf="@id/firstNamePerson"
        app:layout_constraintTop_toTopOf="@id/firstNamePerson"
        android:layout_marginStart="3dp"/>

    <TextView
        android:id="@+id/departmentTitle"
        style="@style/List_Item_String"
        app:layout_constraintStart_toStartOf="@id/nameTitle"
        app:layout_constraintTop_toBottomOf="@id/nameTitle"
        android:text="@string/departmentTitle"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/departmentPerson"
        style="@style/List_Item_String"
        app:layout_constraintStart_toEndOf="@id/departmentTitle"
        app:layout_constraintTop_toTopOf="@id/departmentTitle"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/emailTitle"
        style="@style/List_Item_String"
        app:layout_constraintStart_toStartOf="@id/departmentTitle"
        app:layout_constraintTop_toBottomOf="@id/departmentTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/emailTitle"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/emailPerson"
        style="@style/List_Item_String"
        app:layout_constraintStart_toEndOf="@id/emailTitle"
        app:layout_constraintTop_toTopOf="@id/emailTitle"
        android:layout_marginStart="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>